--- a/index.html
+++ b/index.html
@@ -5,11 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Portofolio</title>
 </head>
 
 <body>
-
+    <header>
+        <nav>
+            <div class="logo"></div>
+            <div class="links">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About me</a></li>
+                    <li><a href="">skills</a></li>
+                    <li><a href="">Portofolio</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact me</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <section class="section-one">
+        <div class="container">
+            <div class="col-left">
+                <p>Hi, there</p>
+                <h1>I am Ishimwe Rodrigue</h1>
+                <p>a software developer and tech enthusiast</p>
+                <div class="col-down">
+                    <img src="images/github.png" alt="" class="socials">
+                    <img src="images/instagram.png" alt="" class="socials">
+                    <img src="images/linkedin (1).png" alt="" class="socials">
+                    <img src="images/twitter1.png" alt="" class="socials">
+                </div>
+            </div>
+            <img src="images/DSC_3745.png" alt="" srcset="" class="profile">
+        </div>
+    </section>
 </body>
 
 </html>
