add html and css files

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="col-left">
                 <p>Hi, there</p>
-                <h1>I am Ishimwe Rodrigue</h1>
+                <h1>I am Ishimwe <span>Rodrigue<span></h1>
                 <p>a software developer and tech enthusiast</p>
                 <div class="col-down">
                     <img src="images/github.png" alt="" class="socials">
