--- a/about.html
+++ b/about.html
@@ -5,13 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
     <title>About
     </title>
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="logo"></div>
+            <div class="links">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About me</a></li>
+                    <li><a href="">skills</a></li>
+                    <li><a href="">Portofolio</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact me</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <section class="section-one">
+        <div class="container">
+            <div class="col-left">
+                <img src="images/DSC_3745.png" alt="" srcset="" class="profile">
+                <h1>About me</h1>
+                <h2>HI, i am ishimwe rodrigue</h2>
+                <p>software developer and a tech enthusiast a highly <br> motivated and skilled professional with a passion,<br> and hard work.</p>
 
+            </div>
+
+        </div>
+    </section>
 </body>
 
 </html>
