--- a/index.html
+++ b/index.html
@@ -6,27 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Portofolio</title>
+    <title>Home</title>
 </head>
 
 <body>
     <header>
         <nav>
             <div class="logo"></div>
-            <div class="links">
+            <div class="links" id="linkMenu">
+                <img src="images/close.png" alt="" class="close" onclick="closeBar()">
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="">About me</a></li>
-                    <li><a href="">skills</a></li>
-                    <li><a href="">Portofolio</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact me</a></li>
-                    <li><a href="">Login</a></li>
+                    <li><a href="./about.html">About me</a></li>
+                    <li><a href="./skills.html">skills</a></li>
+                    <li><a href="./portofolio.html">Portofolio</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./contact.html">Contact me</a></li>
+                    <li><a href="./login.html">Login</a></li>
                 </ul>
             </div>
+            <img src="images/menu.png" alt="" class="menu" onclick="menuBar()">
         </nav>
     </header>
     <section class="section-one">
+        <img src="images/DSC_3745.png" alt="" srcset="" class="profiles">
         <div class="container">
             <div class="col-left">
                 <p>Hi, there</p>
@@ -42,6 +45,18 @@
             <img src="images/DSC_3745.png" alt="" srcset="" class="profile">
         </div>
     </section>
+
+    <script>
+        var linkMenu = document.getElementById('linkMenu');
+        function closeBar() {
+            linkMenu.style.right = '0';
+        }
+
+        function menuBar(){
+            linkMenu.style.right="-200px";
+
+        }
+    </script>
 </body>
 
 </html>
