--- a/blogform.html
+++ b/blogform.html
@@ -33,22 +33,36 @@
         </div>
         <h2>Blog Form</h2>
         <div class="div-form">
-            <form action="">
-                <label for="">Title</label>
-                <input type="text" name="firstname" id="firstname" placeholder="Title">
-                <label for="">Author</label>
-                <input type="text" name="lastname" id="lastname" placeholder="Enter your last names">
-                <label for="">pick an image</label>
-                <input type="file">
-                <label for="">Date</label>
-                <input type="date" name="date" id="date">
-                <label for="">Article</label>
-                <textarea name="message" id="message" cols="30" rows="10" placeholder="Write an article"></textarea>
+            <form action="" id="form">
+                <div class="group-form">
+                    <label for="">Title</label>
+                    <input type="text" name="title" id="title" placeholder="Title">
+                    <div class="fail hidden">the title is required</div>
+                </div>
+                <div class="group-form">
+                    <label for="">Author</label>
+                    <input type="text" name="name" id="name" placeholder="Enter your names">
+                    <div class="fail hidden">your names are required</div>
+                </div>
+                <div class="group-form">
+                    <label for="">pick an image</label>
+                    <input type="file" accept="image/png, image/jpg" id="image-picker">
+                    <div class="fail hidden">your image is required</div>
+                    <div id="display"></div>
+
+                </div>
+                <div class="group-form">
+                    <!-- <label for="">Date</label>
+                <input type="date" name="date" id="date"> -->
+                    <label for="">Article</label>
+                    <textarea name="article" id="article" cols="30" rows="10" placeholder="Write an article"></textarea>
+                    <div class="fail hidden">your email is required</div>
+                </div>
                 <input type="submit" value="Post">
 
             </form>
     </section>
-
+    <script src="blogform.js"></script>
 </body>
 
 </html>
