--- a/contact.html
+++ b/contact.html
@@ -30,21 +30,41 @@
         <h1>Contact me</h1>
         <div class="div-container">
             <div class="div-left">
-                <form action="">
-                    <label for="">FirstName</label>
-                    <input type="text" name="firstname" id="firstname" placeholder="FirstName">
-                    <label for="">LastName</label>
-                    <input type="text" name="lastname" id="lastname" placeholder="LastName">
-                    <label for="">Email</label>
-                    <input type="text" name="email" id="email" placeholder="Email">
-                    <label for="">Message</label>
-                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Write a message"></textarea>
-                    <input type="submit" value="send message">
+                <form action="queries.html" id="form">
+                    <div div class="form-div">
+                        <label for="">FullName</label>
+                        <input type="text" name="fullname" id="fullname" placeholder="FullName">
+                        <div class="fail hidden">your name is required</div>
+                    </div>
+
+                    <div class="form-div">
+                        <label for="">Email</label>
+                        <input type="text" name="email" id="email" placeholder="Email">
+                        <div class="fail hidden">your email is required</div>
+                    </div>
+                    <!-- <div class="form-div">
+                        <label for="">PhoneNumber</label>
+                        <input type="text" name="email" id="phonenumber" placeholder="phone number">
+                        <div class=" fail hidden ">your phone number is required</div>
+                    </div> -->
+
+                    <div class="form-div ">
+                        <label for=" ">Message</label>
+                        <textarea name="message " id="message" cols="30 " rows="10 " placeholder="Write a message "></textarea>
+                        <div class="fail hidden "> your message is required</div>
+                    </div>
+
+                    <input type="submit" value="send a message">
+
 
                 </form>
+                <!-- <div class="thank you hidden " id="thanks ">
+                    Thanks for the feedback
+                </div> -->
 
             </div>
-            <div class="div-right">
+
+            <div class="div-right ">
                 <div>
                     <p>Phone Number:</p>
                     <span>0787458843</span>
@@ -61,10 +81,10 @@
                 </div>
 
                 <div>
-                    <img src="images/github.png" alt="">
-                    <img src="images/instagram.png" alt="">
-                    <img src="images/twitter1.png" alt="">
-                    <img src="images/linkedin (1).png" alt="">
+                    <img src="images/github.png " alt=" ">
+                    <img src="images/instagram.png " alt=" ">
+                    <img src="images/twitter1.png " alt=" ">
+                    <img src="images/linkedin (1).png " alt=" ">
                 </div>
 
 
@@ -74,6 +94,9 @@
         </div>
 
     </section>
+    <section>
+    </section>
+    <script src="contact.js "></script>
 </body>
 
 </html>
