--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
 <body>
     <section class="sidebar">
         <div class="panel">
-            <img src="images/s-logo.jpg" alt="" class="logo">
+            <img src="images/s-logo.jpg" alt="" class="logo" />
             <h1>Admin Panel</h1>
         </div>
 
