--- a/signup.html
+++ b/signup.html
@@ -29,22 +29,34 @@
     <section>
         <h1>Sign up</h1>
         <div class="container">
-            <form action="">
-
-                <input type="text" name="names" id="names" placeholder="Names" required>
-
-                <input type="text" name="email" id="email" placeholder="Email" required>
-
-                <input type="text" name="password" id="password" placeholder="Password" required>
-                <p class="signup">have an account <a href="./login.html">Login up</a> here</p>
-
-
-                <a href="./dashboard.html"><input type="submit" value="Sign up"></a>
-
+            <form action="index.html" method="post" class="form" id="form" onsubmit="checkInput()">
+                <div class="div-form ">
+                    <label for="username">username</label>
+                    <input type="text" name="name" id="username" placeholder="Names">
+                    <small>error message</small>
+                </div>
+                <div class="div-form ">
+                    <label for="username">Email</label>
+                    <input type="text" name="email" id="email" placeholder="Email">
+                    <small>error message</small>
+                </div>
+                <div class="div-form">
+                    <label for="username">Password</label>
+                    <input type="password" name="password" id="password" placeholder="Password">
+                    <small>error message</small>
+                </div>
+                <div class="div-form">
+                    <label for="username">Confirm Password</label>
+                    <input type="password" name="password" id="password1" placeholder="Confirm Password">
+                    <small>error message</small>
+                </div>
+                <p class="signup"> have an account <a href="./login.html" class="login">  Sign up</a> here</p>
+                <input type="submit" value="Sign up" id="submit">
+                <!-- <button>submit</button> -->
             </form>
         </div>
     </section>
-
+    <script src="signup.js"></script>
 </body>
 
 </html>
