--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
     <section>
         <h1>Login</h1>
         <div class="container">
-            <form action="index.html" method="post" id="form">
+            <form action="dashboard.html" method="post" id="form">
 
                 <!-- <div class="div-form ">
                     <label for="username">username</label>
@@ -38,7 +38,7 @@
                 </div> -->
                 <div class="div-form ">
                     <label for="username">Email</label>
-                    <input type="text" name="email" id="email" placeholder="Email">
+                    <input type="email" name="email" id="email" placeholder="Email">
                     <small>error message</small>
                 </div>
                 <div class="div-form">
