--- a/queries.html
+++ b/queries.html
@@ -40,64 +40,20 @@
         <div class="list-queries">
 
 
-            <table>
+            <table id="query-table">
                 <thead>
                     <tr>
 
+                        <th>names</th>
+                        <th>Email</th>
+                        <th>Message</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>ishimwe</td>
-                        <td>rodrigue</td>
-                        <td>ishimwerodrigue10@gmail.com</td>
-                        <td>can we meet </td>
-
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>ishimwe</td>
-                        <td>rodrigue</td>
-                        <td>ishimwerodrigue10@gmail.com</td>
-                        <td>can we meet </td>
-
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>ishimwe</td>
-                        <td>rodrigue</td>
-                        <td>ishimwerodrigue10@gmail.com</td>
-                        <td>can we meet </td>
-
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>ishimwe</td>
-                        <td>rodrigue</td>
-                        <td>ishimwerodrigue10@gmail.com</td>
-                        <td>can we meet </td>
-
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>ishimwe</td>
-                        <td>rodrigue</td>
-                        <td>ishimwerodrigue10@gmail.com</td>
-                        <td>can we meet </td>
-
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>ishimwe</td>
-                        <td>rodrigue</td>
-                        <td>ishimwerodrigue10@gmail.com</td>
-                        <td>can we meet </td>
-
-                    </tr>
                 </tbody>
             </table>
         </div>
+        <script src="contact.js"></script>
 </body>
 
 </html>
