--- a/signup.html
+++ b/signup.html
@@ -29,7 +29,7 @@
     <section>
         <h1>Sign up</h1>
         <div class="container">
-            <form action="index.html" method="post" class="form" id="form" onsubmit="checkInput()">
+            <form action="dasboard.html" method="post" class="form" id="form" onsubmit="checkInput()">
                 <div class="div-form ">
                     <label for="username">username</label>
                     <input type="text" name="name" id="username" placeholder="Names">
@@ -37,7 +37,7 @@
                 </div>
                 <div class="div-form ">
                     <label for="username">Email</label>
-                    <input type="text" name="email" id="email" placeholder="Email">
+                    <input type="email" name="email" id="email" placeholder="Email">
                     <small>error message</small>
                 </div>
                 <div class="div-form">
@@ -50,7 +50,7 @@
                     <input type="password" name="password" id="password1" placeholder="Confirm Password">
                     <small>error message</small>
                 </div>
-                <p class="signup"> have an account <a href="./login.html" class="login">  Sign up</a> here</p>
+                <p class="signup"> have an account <a href="./login.html" class="login">  Login up</a> here</p>
                 <input type="submit" value="Sign up" id="submit">
                 <!-- <button>submit</button> -->
             </form>
