--- a/blogform.html
+++ b/blogform.html
@@ -34,7 +34,7 @@
         <h2>Blog Form</h2>
         <div class="div-form">
             <form action="" id="form">
-                <div class="group-form">
+                <div class="group-form" onsubmit="AddArticle()">
                     <label for="">Title</label>
                     <input type="text" name="title" id="title" placeholder="Title">
                     <div class="fail hidden">the title is required</div>
@@ -59,7 +59,8 @@
                     <div class="fail hidden">the content is required</div>
                 </div>
                 <input id="submit" type="submit" value="Post" onclick="AddArticle()">
-                <!-- <button id="submit" onclick="addArticle()"></button> -->
+                <input id="update" type="submit" value="Update" onclick="AddArticle()">
+
 
             </form>
             <div class="container-row">
@@ -71,6 +72,8 @@
                             <th>Author</th>
                             <th>Image</th>
                             <th>Article</th>
+                            <th>delete/edit</th>
+
                         </tr>
 
                     </thead>
