correcting html page links

--- a/queries.html
+++ b/queries.html
@@ -21,7 +21,7 @@
             <li><img src="images/dashboard.png" alt=""><a href="./dashboard.html">Dashboard</a></li>
             <li><img src="images/house.png" alt=""><a href="./index.html">Home</a></li>
             <li><img src="images/email.png" alt=""><a href="">Message</a></li>
-            <li><img src="images/news.png" alt=""><a href="./form.html">Blog</a></li>
+            <li><img src="images/news.png" alt=""><a href="./blogform.html">Blog</a></li>
             <li><img src="images/log-out.png" alt=""><a href="./login.html">Logout</a></li>
         </div>
     </section>
