getting blogs from local storage to blog page

--- a/blogform.html
+++ b/blogform.html
@@ -48,7 +48,7 @@
                     <label for="">pick an image</label>
                     <input type="file" accept="image/png, image/jpg" id="image-picker">
                     <div class="fail hidden">your image is required</div>
-                    <div id="display"></div>
+                    <img id="display" src="" alt="">
 
                 </div>
                 <div class="group-form">
