fixing a bug to display image on a blog

--- a/blogform.html
+++ b/blogform.html
@@ -48,7 +48,7 @@
                     <label for="">pick an image</label>
                     <input type="file" accept="image/png, image/jpg" id="image-picker">
                     <div class="fail hidden">your image is required</div>
-                    <img id="display" src="" alt="">
+                    <img id="img-url" src="images/account.png" alt="" width="30" height="30">
 
                 </div>
                 <div class="group-form">
@@ -77,7 +77,7 @@
                         </tr>
 
                     </thead>
-                    <tbody></tbody>
+                    <tbody id="table-data"></tbody>
 
                 </table>
             </div>
