--- a/fullblog.html
+++ b/fullblog.html
@@ -44,9 +44,9 @@
                 <p>comment</p>
             </div> -->
             <div class="form">
-                <form action="">
+                <form action="" id="form">
                     <label for="">1 Comment</label>
-                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Write a comment"></textarea>
+                    <textarea name="message" id="input-form" cols="30" rows="10" placeholder="Write a comment"></textarea>
                     <input type="submit" value="Post">
                 </form>
             </div>
@@ -62,6 +62,7 @@
 
 
         </div>
+        <script src="fullblog.js"></script>
     </section>
 
 
