displaying a full blog by clicking read more

--- a/blogform.html
+++ b/blogform.html
@@ -58,7 +58,7 @@
                     <textarea name="article" id="article" cols="30" rows="10" placeholder="Write an article"></textarea>
                     <div class="fail hidden">the content is required</div>
                 </div>
-                <input id="submit" type="submit" value="Post" onclick="AddArticle()">
+                <input id="submit" type="submit" value="Publish" onclick="AddArticle()">
                 <input id="update" type="submit" value="Update" onclick="AddArticle()">
 
 
