fixing bugs on comment

--- a/fullblog.html
+++ b/fullblog.html
@@ -65,14 +65,14 @@
                 </div>
             </div>
 
-            <div class="comment-box">
+            <!-- <div class="comment-box"> -->
 
-                <div>
+            <!-- <div>
                     <p class="text">this topic is useful this topic is useful this topic is useful this topic is useful this topic is useful this topic is useful this topic is useful</p>
                     <h3>ishimwe rodrigue</h3>
-                </div>
+                </div> -->
 
-            </div>
+            <!-- </div> -->
 
 
         </div>
