--- a/blog.html
+++ b/blog.html
@@ -96,7 +96,7 @@
         </div>
         <!-- <img src="images/arrow-right.png" alt=""> -->
     </section>
-    <script src="blog.js"></script>
+    <script src="../js/blog.js"></script>
 </body>
 
 </html>
