--- a/blogform.html
+++ b/blogform.html
@@ -62,36 +62,22 @@
             <input id="update" type="submit" value="Update" onclick="">
 
 
-<<<<<<< HEAD
-            </form>
-            <div class="container-row">
-                <table id="article-table">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Title</th>
-                            <th>Author</th>
-                            <th>Image</th>
-                            <th>Article</th>
-                            <th>delete/edit</th>
-=======
         </form>
         <div class="container-row">
             <table id="article-table">
                 <thead>
                     <tr>
-
+                        <th>ID</th>
                         <th>Title</th>
                         <th>Author</th>
                         <th>Image</th>
                         <th>Article</th>
                         <th>delete/edit</th>
->>>>>>> intergration
 
                     </tr>
 
                 </thead>
-                <tbody id="table-data"></tbody>
+                <tbody></tbody>
 
             </table>
         </div>
