--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
             </form>
         </div>
     </section>
-    <script src="login.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
