--- a/queries.html
+++ b/queries.html
@@ -53,7 +53,7 @@
                 </tbody>
             </table>
         </div>
-        <script src="contact.js"></script>
+        <script src="queries.js"></script>
 </body>
 
 </html>
