fixing the update and the delete functionality

--- a/adminpanel.html
+++ b/adminpanel.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="queries.css">
+    <link rel="stylesheet" href="adminpanel.css">
     <title>Queries</title>
 </head>
 
@@ -19,9 +19,9 @@
 
         <div class="menu">
             <li><img src="images/dashboard.png" alt=""><a href="./dashboard.html">Dashboard</a></li>
-            <li><img src="images/dashboard.png" alt=""><a href="./adminpanel.html">Admin Panel</a></li>
+            <li><img src="images/dashboard.png" alt=""><a href="./adminpanel.html">Dashboard</a></li>
             <li><img src="images/house.png" alt=""><a href="./index.html">Home</a></li>
-            <li><img src="images/email.png" alt=""><a href="">Message</a></li>
+            <li><img src="images/email.png" alt=""><a href=".queries.htmlS">Message</a></li>
             <li><img src="images/news.png" alt=""><a href="./blogform.html">Blog</a></li>
             <li><img src="images/log-out.png" alt=""><a href="./login.html">Logout</a></li>
         </div>
@@ -54,7 +54,7 @@
                 </tbody>
             </table>
         </div>
-        <script src="queries.js"></script>
+        <script src="adminpanel.js"></script>
 </body>
 
 </html>
