--- a/dashboard.html
+++ b/dashboard.html
@@ -19,6 +19,7 @@
 
         <div class="menu">
             <li><img src="images/dashboard.png" alt=""><a href="">Dashboard</a></li>
+            <li><img src="images/dashboard.png" alt=""><a href="adminpanel.html">AdminPanel</a></li>
             <li><img src="images/house.png" alt=""><a href="./index.html">Home</a></li>
             <li><img src="images/email.png" alt=""><a href="./queries.html">Message</a></li>
             <li><img src="images/news.png" alt=""><a href="./blogform.html">Blog</a></li>
