fixing the update blogs

--- a/blogform.html
+++ b/blogform.html
@@ -60,8 +60,8 @@
                 <small>error message</small>
             </div>
             <input id="submit" type="submit" value="Publish" onclick="">
-            <input id="update" type="submit" value="Update" onclick="" disabled>
-            <input id="reset" type="submit" value="Reset" onclick="">
+            <input id="update" type="submit" value="Update" onclick="editBlog()">
+            <!-- <input id="reset" type="submit" value="Reset" onclick=""> -->
 
 
         </form>
