removing unneccessary files

--- a/blogform.html
+++ b/blogform.html
@@ -60,7 +60,7 @@
                 <small>error message</small>
             </div>
             <input id="submit" type="submit" value="Publish" onclick="">
-            <input id="update" type="submit" value="Update" onclick="editBlog()">
+            <input id="update" type="submit" value="Update" onclick="updateButton()">
             <!-- <input id="reset" type="submit" value="Reset" onclick=""> -->
 
 
